--- a/style.css
+++ b/style.css
@@ -3,31 +3,27 @@ body{
 }
 
 ul {
-  position: center;
-  left: 250px;
-  margin: 0;
-  padding: 50;
+  width:60%;
   background-color: #333333;
   color: white;
   border-radius: 10px;
 }
 
 h2 {
+  width:80%;
   display: block;
   text-align: left;
   padding: 20px;
   text-decoration: none;
 }
 p{
+  width:80%;
   display:block;
-  margin: 0;
-  padding: 20px;
+  text-align:left;
+  padding:20px;
   overflow: hidden;
 }
 
-  img {
-    display:block;
-    border-radius: 5px;
-    right:3px;
+img {
+    border-radius: 10px;
 }
-
